--- a/templates/layout.rhtml
+++ b/templates/layout.rhtml
@@ -15,7 +15,7 @@
         <link href="http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz" rel="stylesheet" type="text/css">
     </head>
     <body>
-        <a href="http://github.com/0x6c_template">
+        <a href="http://github.com/moski/0x6c_template/">
             <img alt="Fork me on GitHub" src="/images/forkme_right_gray_6d6d6d.png" style="position: absolute; top: -15pt; right: 0pt; border: 0pt none;">
         </a>
         
